--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
